--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -97,7 +97,7 @@
                  <rect>
                   <x>0</x>
                   <y>0</y>
-                  <width>338</width>
+                  <width>328</width>
                   <height>366</height>
                  </rect>
                 </property>
@@ -228,6 +228,20 @@
               <widget class="QPushButton" name="btn_delete_rule">
                <property name="text">
                 <string>删除规则</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QPushButton" name="pushButton_getfacts">
+               <property name="text">
+                <string>查询所有事实</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QPushButton" name="pushButton_getRules">
+               <property name="text">
+                <string>查询所有规则</string>
                </property>
               </widget>
              </item>
