--- a/addrulesdialog.ui
+++ b/addrulesdialog.ui
@@ -42,7 +42,7 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>343</width>
+           <width>319</width>
            <height>236</height>
           </rect>
          </property>
@@ -131,6 +131,19 @@
            </property>
            <property name="text">
             <string>-</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QCheckBox" name="checkBox_isAnimal">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="text">
+            <string>具体动物？</string>
            </property>
           </widget>
          </item>
