--- a/addrulesdialog.ui
+++ b/addrulesdialog.ui
@@ -11,7 +11,11 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>添加规则</string>
+  </property>
+  <property name="windowIcon">
+   <iconset resource="resources.qrc">
+    <normaloff>:/1/30.ico</normaloff>:/1/30.ico</iconset>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
@@ -21,6 +25,7 @@
        <widget class="QLabel" name="label">
         <property name="font">
          <font>
+          <family>全新硬笔行书简</family>
           <pointsize>13</pointsize>
          </font>
         </property>
@@ -42,8 +47,8 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>319</width>
-           <height>236</height>
+           <width>277</width>
+           <height>232</height>
           </rect>
          </property>
         </widget>
@@ -53,6 +58,7 @@
        <widget class="QLabel" name="label_2">
         <property name="font">
          <font>
+          <family>全新硬笔行书简</family>
           <pointsize>13</pointsize>
          </font>
         </property>
@@ -114,6 +120,28 @@
            <property name="text">
             <string>+</string>
            </property>
+           <property name="icon">
+            <iconset resource="resources.qrc">
+             <normaloff>:/2/Button Add.ico</normaloff>:/2/Button Add.ico</iconset>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>60</width>
+             <height>60</height>
+            </size>
+           </property>
+           <property name="popupMode">
+            <enum>QToolButton::DelayedPopup</enum>
+           </property>
+           <property name="toolButtonStyle">
+            <enum>Qt::ToolButtonIconOnly</enum>
+           </property>
+           <property name="autoRaise">
+            <bool>true</bool>
+           </property>
+           <property name="arrowType">
+            <enum>Qt::NoArrow</enum>
+           </property>
           </widget>
          </item>
          <item>
@@ -132,6 +160,19 @@
            <property name="text">
             <string>-</string>
            </property>
+           <property name="icon">
+            <iconset resource="resources.qrc">
+             <normaloff>:/2/Button Delete.ico</normaloff>:/2/Button Delete.ico</iconset>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>60</width>
+             <height>60</height>
+            </size>
+           </property>
+           <property name="autoRaise">
+            <bool>true</bool>
+           </property>
           </widget>
          </item>
          <item>
@@ -142,8 +183,23 @@
              <verstretch>0</verstretch>
             </sizepolicy>
            </property>
+           <property name="font">
+            <font>
+             <pointsize>10</pointsize>
+            </font>
+           </property>
            <property name="text">
             <string>具体动物？</string>
+           </property>
+           <property name="icon">
+            <iconset resource="resources.qrc">
+             <normaloff>:/1/37.ico</normaloff>:/1/37.ico</iconset>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>28</width>
+             <height>25</height>
+            </size>
            </property>
           </widget>
          </item>
@@ -183,8 +239,37 @@
              <verstretch>0</verstretch>
             </sizepolicy>
            </property>
+           <property name="font">
+            <font>
+             <pointsize>12</pointsize>
+             <weight>75</weight>
+             <bold>true</bold>
+            </font>
+           </property>
            <property name="text">
             <string>确定</string>
+           </property>
+           <property name="icon">
+            <iconset resource="resources.qrc">
+             <normaloff>:/1/312.ico</normaloff>:/1/312.ico</iconset>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>30</width>
+             <height>30</height>
+            </size>
+           </property>
+           <property name="checkable">
+            <bool>false</bool>
+           </property>
+           <property name="autoRepeat">
+            <bool>false</bool>
+           </property>
+           <property name="autoExclusive">
+            <bool>false</bool>
+           </property>
+           <property name="autoDefault">
+            <bool>true</bool>
            </property>
           </widget>
          </item>
@@ -196,6 +281,8 @@
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="resources.qrc"/>
+ </resources>
  <connections/>
 </ui>
